# IA

./: BPI.c  BPI.run  Board.c  Board.h  BoardStack.c  CMakeCache.txt  CMakeLists.txt  Game.c  IA  IA.cbp  IDS.c  IDS.h  IDS.h.gch  Makefile  MovementStack.c  MovementStack.h  Queue.c  README.md  Stack.c  Stack.h.gch  StackV2.c  a.out  cmake_install.cmake  heap.c  heur.c  input.txt  input1.txt  main.c  movimentos.c  movimentos.h  movimentos.h.gch
.cmake/api/v1/reply/: cache-v2-3607809824685512815b.json  cmakeFiles-v1-1dc4480bc760874b9ab3.json  codemodel-v2-550f37796c31d9677081.json  codemodel-v2-bda8615cabe4c7c43193.json  index-2022-03-24T18-48-26-0501.json  index-2022-03-24T19-36-20-0189.json  target-IA-Debug-6078463ec7076d9bd7c3.json  target-IA-Debug-830e2a88e4f859407b92.json
DataAnalysis/: .~lock.data.csv#  analysis.ipynb  data.csv  graphs.ipynb
DataStructures/: BFSBoard.c  BFSBoard.h  Board.c  BoardList.c  BoardList.h  BoardStack.c  BoardStack.h  DFSBoard.c  DFSBoard.h  DFSBoardStack.c  DFSBoardStack.h  HashStack.c  HashStack.h  Heap.c  Heap.h  IDSBoard.c  IDSBoard.h  MovementStack.c  MovementStack.h  Queue.c  Queue.h  Stack.c  Stack.h
Input/: input3.txt  input4.txt  input8.txt
Inputs/: input.txt  input2.txt  input3.txt  input4.txt  input6.txt  input7.txt
SearchAlgs/: A*.c  A*.h  BFS.c  BFS.h  BL.c  BL.h  BP.c  BP.h  DFS.c  DFS.h  Guloso.c  Guloso.h  Heur.c  Heur.h  IDS.c  IDS.h  Movimentos.c  Movimentos.h  a.out
Utils/: BoardUtils.c  BoardUtils.h  Timer.c  Timer.h
